Archive2/ca/e07634ff032ebf/output
main.cpp:72:5: error: no matching function for call to 'PrintCrc'
    PrintCrc<CalcCRC32("123")>();
    ^~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:63:6: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'crc'
void PrintCrc()
     ^
1 error generated.
